# my-rasterizer

./: CMakeLists.txt  README.md
include/: Camera.hpp  FrameBuffer.hpp  ReadObj.hpp
include/math/: Mat4.hpp  Vec3.hpp  Vec4.hpp  Vecteur.hpp
src/: FrameBuffer.cpp  main.cpp
